<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".AgregarUsuarios">

    <TextView
        android:text="@string/tituloaddusu"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="80dp"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView

            android:layout_gravity="center"
            android:layout_width="150dp"
            android:text="@string/lblrunusuario"
            android:layout_height="wrap_content"></TextView>

        <EditText
            android:id="@+id/txt_runU"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/hintrunusuario"
            ></EditText></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView

            android:layout_gravity="center"
            android:layout_width="150dp"
            android:text="@string/lblnombreusuario"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/txt_nombreU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hintnombreusuario"
            ></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView

            android:layout_gravity="center"
            android:layout_width="150dp"
            android:text="@string/lblpassusuario"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/txt_passU"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/hintpassusuario"
            ></EditText>
    </LinearLayout>
    <Button
        android:id="@+id/btn_registrarUser"
        android:layout_width="match_parent"
        android:text="@string/registrar"
        android:layout_marginBottom="120dp"
        android:layout_height="wrap_content"></Button>
    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_gravity="bottom"
        android:text="@string/turut"
        android:layout_height="wrap_content"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_gravity="bottom"
        android:text="@string/sitienes"
        android:layout_height="wrap_content"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_gravity="bottom"
        android:text="@string/tienes"
        android:layout_height="wrap_content"></TextView>
    <Button
        android:id="@+id/btn_log"
        android:layout_width="match_parent"
        android:text="@string/ingresac"
        android:layout_height="wrap_content"></Button>

</LinearLayout>