<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView

            android:layout_gravity="center"
            android:layout_width="150dp"
            android:text="@string/lblnombrelibro"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:id="@+id/lbl_nombrel"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="textview"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView

            android:layout_gravity="center"
            android:layout_width="150dp"
            android:text="@string/lblstocklibro"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:id="@+id/lbl_stockl"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="textview"
            android:layout_gravity="center"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/lblfechaldibro"
            android:layout_height="wrap_content"></TextView>

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:text="@string/seleccionar"
            android:layout_height="wrap_content"></Button>

        <TextView
            android:id="@+id/lbl_fecha"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btn_addFav"
            android:layout_gravity="end"
            android:text="@string/addfav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>

        <Button
            android:id="@+id/btn_reservar"
            android:layout_gravity="end"
            android:layout_marginStart="50dp"
            android:text="@string/reser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>


    </LinearLayout>


</LinearLayout>