<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView

            android:layout_gravity="center"
            android:layout_width="150dp"
            android:text="@string/lblnombrelibro"
            android:layout_height="wrap_content"></TextView>
    <TextView
        android:id="@+id/lbl_nombrelibfav"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="textview"
        android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView

            android:layout_gravity="center"
            android:layout_width="150dp"
            android:text="@string/lblrunusuario"
            android:layout_height="wrap_content"></TextView>
    <TextView
        android:id="@+id/lbl_runfav"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="textview"
        android:layout_gravity="center"
        android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView

            android:layout_gravity="center"
            android:layout_width="150dp"
            android:text="@string/lblnombreusuario"
            android:layout_height="wrap_content"></TextView>
    <TextView
        android:id="@+id/lbl_nombrefav"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="textview"
        android:layout_gravity="center"
        android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <Button
        android:id="@+id/btn_del"
        android:layout_width="wrap_content"
        android:layout_gravity="center|right"
        android:text="@string/eli"
        android:layout_height="wrap_content"></Button>

</LinearLayout>